[package]
name = "rustmark"
version = "0.4.2"
description = "Extensible web application for serving Markdown-based content"
categories = ["asynchronous", "parser-implementations", "text-processing", "web-programming", "web-programming::http-server"]
keywords = ["web", "server", "markdown", "template", "authentication"]
edition = "2021"
license = "MIT"
authors = ["Dan Williams <dan@dotfive.co.uk>"]
repository = "https://github.com/danwilliams/rustmark"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true     # Automatically strip symbols from the binary
opt-level = 3    # Maximum optimisation (this is the cargo default)
lto = "thin"     # Enable link-time optimisation (fast)

[dependencies]
axum = "0.6.20"
axum-sessions = "0.5.0"
base64 = "0.21.4"
bytes = "1.5.0"
chrono = { version = "0.4.31", features = ["std", "alloc", "clock", "serde"] }
comrak = { version = "0.18.0", features = ["emojis", "shortcodes"] }
figment = { version = "0.10.10", features = ["toml", "env"] }
flume = "0.11.0"
include_dir = { version = "0.7.3", features = ["glob"] }
indexmap = { version = "2.0.2", features = ["serde"] }
itertools = "0.11.0"
mime_guess = "2.0.4"
nipper = "0.1.9"
parking_lot = "0.12.1"
rand = { version = "0.8.5", features = ["min_const_gen"] }
ring = "0.16.20"
rubedo = "0.3.6"
secrecy = "0.8.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = { version = "1.0.107", features = ["preserve_order"] }
smart-default = "0.7.1"
tendril = "0.4.3"
tera = "1.19.1"
tikv-jemalloc-ctl = "0.5.4"
tikv-jemallocator = "0.5.4"
tokio = { version = "1.32.0", features = ["fs", "io-std", "io-util", "macros", "rt-multi-thread"] }
tokio-util = { version = "0.7.9", features = ["io", "io-util"] }
tower-http = { version = "0.4.4", features = ["catch-panic", "trace"] }
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
url = "2.4.1"
utoipa = { version = "3.5.0", features = ["axum_extras", "chrono", "preserve_order", "indexmap"] }
utoipa-rapidoc = { version = "0.1.0", features = ["axum"] }
utoipa-redoc = { version = "0.1.0", features = ["axum"] }
utoipa-swagger-ui = { version = "3.1.5", features = ["axum"] }
velcro = "0.5.4"

[build-dependencies]
comrak = { version = "0.18.0", features = ["emojis", "shortcodes"] }
nipper = "0.1.9"
rubedo = "0.1.1"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = { version = "1.0.107", features = ["preserve_order"] }
tendril = "0.4.3"
tokio = { version = "1.32.0", features = ["io-std", "io-util", "macros", "rt", "rt-multi-thread", "time"] }
walkdir = "2.4.0"

[dev-dependencies]
assert-json-diff = "2.0.2"
serde_json = { version = "1.0.107", features = ["preserve_order"] }
